# pynasonde

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  codemeta.json  compile.sh  configure.py  env.yml  junit.xml  mkdocs.yml  mkdocs_b.yml  prebuilt.py  pyproject.toml  setup.py  sync.sh
code/: digi.py  download_datasets.py  dump_header.py  eclipse2017_analysis.py  eclipse2023_analysis.py  eclipse2024_analysis.py  eclipse2024_foF2.py  eclipse_fof2_plot.py  eclipse_time_series.py  hires.py  ionogram.py  sao_example.py
docs/: .pages  index.md  requirements.txt
examples/: example_read_digisonde.py
issue/: release_notes_v1.3.0.md
pynasonde/: __init__.py  config.toml  digisonde_station_codes.csv  saoxml.dtd  webhook.py
tests/: conftest.py  test_cadi_reader.py  test_dft_parser.py  test_digi_plots.py  test_digi_plots_extended.py  test_digi_utils.py  test_digisonde_examples.py  test_digisonde_filename_metadata.py  test_digisonde_shared_loaders.py  test_dvl_parser.py  test_echo.py  test_examples_runtime.py  test_grm_splitter.py  test_init_imports.py  test_interferometric.py  test_ionogram_filter.py  test_mmm_datatypes.py  test_model_imports.py  test_ngi_utils_extra.py  test_packed_byte_parsers.py  test_parsers_imports.py  test_proc_riq_example.py  test_raw_parse_funcs.py  test_raw_plots.py  test_read_riq_utils.py  test_riq_utils.py  test_rsf_datatypes.py  test_rsf_sbf_static.py  test_sao_extra.py  test_sao_multirecord_regression.py  test_sao_parser.py  test_sao_parser_extended.py  test_saoxmldatatypes_extended.py  test_sct_dump.py  (+10 more)
(+318 files in other folders)
